<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

<!--  #boton para lanzar la activity MapsActivity
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:onClick="@string/launchMostrarMapas"
        android:text="@string/showmaps" />
-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="30dip" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/start" />

        <Button
            android:id="@+id/button1"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/Activity"
            android:textColor="@color/Blanco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@android:color/transparent"
                    android:src="@drawable/bump_128x128_32" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/Mamigos"
                    android:textColor="@color/Blanco"
                    android:textSize="14dip" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/maps_128x128_32" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="Tendencias"
                    android:textColor="@color/Blanco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="36dp"
                android:layout_height="161dp"
                android:layout_weight="0.06"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@android:color/transparent"
                    android:src="@drawable/goggles_128x128_32" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/Gamigos"
                    android:textColor="@color/Blanco"
                    android:textSize="14dip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/alarm_128x128_32" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="Alarma"
                        android:textColor="@color/Blanco" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/Button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Red_Social"
            android:textColor="@color/Blanco" />

    </LinearLayout>

</RelativeLayout>
